- BugFix: Add exitfunc to net plugin for exit notification.
- BugFix: Use pause() instead of sleeping
- BugFix: create leaving var as volatile.
- BugFix: Add NAME section to g15daemon_client manpages
- Tweak delay between successive keyboard reads.  This reduces cpu load by
  50% on my system.
- Bugfix: Ensure that all plugin exit functions are called on leaving.
- Bugfix: if keypress event is received (very early in the startup process,
  the daemon would crash.  Check that expected pointers are valid.
- Bugfix: Dont attempt compilation of uinput plugin if headers are
  unavailable.
- Bugfix: Write a blank buffer to the LCD before exiting.
- Feature: Add --lcdlevel cmdline option to allow setting default LCD brightness level
1.9.3:
- BugFix: The documentation for --switch was inverted. Fix.
- Debug: Print list of commandline args when in debug mode
- BugFix: The decreased delay caused keypresses to be misread on some
  machines.  REVERT.
1.9.3->SVN:
- Debug:   Log warning if keyboard disappears.
- Bugfix:  Fix autoconf autodetect bugs re uinput plugin.
- Feature: If autodetection of uinput fails, configure now has a
           --disable-uinput override.  
- Feature: WIP should now compile and run on Linux, MacOSX, and Solaris (v10+).
	   Only Linux and Solaris have been tested.
- Debug:   Add more debugging to plugin loader.
- Debug:   Log build date,OS and GCC version.
- Feature: Plugin loader will now use DEEP_BIND if available, hopefully
	   resolving conflicts on OS's that support it.
- Feature: Solaris support.  Requires some end-user changes to the usb
	   stack at the moment.  Documentation coming soon.
- BugFix:  Plugin loader is now much more robust.
- Feature: Add OS specific documentation for Linux and FreeBSD.
	   Compilation and use on FreeBSD is completely untested.
- Feature: Debug verbosity of g15daemon_log is now variable.
- Feature: Plugin filenames are now cached in g15daemon.conf to allow
	   (manual, at this stage) changing of load-order.